
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]
include = ["isovec*"]
exclude = ["extension*"]


[project]
name = "isovec"
version = "1.0.1"
authors = [
    { name="Julius Mercz", email="julius.mercz@tum.de" }
]
description = "A package to calculate isotopic composition of (custom) Elements, Molecules and Mixtures."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["isotope", "element", "molecule", "mixture", "alloy", "composition", "weight", "atomic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    
]


[project.urls]
"PyPI" = "https://pypi.org/project/isovec/"