
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]
include = ["isovec*"]
exclude = []


[project]
name = "isovec"
version = "1.1.1b1"
authors = [
    { name="Julius Mercz", email="julius.mercz@tum.de" }
]
description = "A package to calculate atomic, weight or volume composition of (custom) elements, molecules and mixtures, down to isotopic composition."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["isotope", "element", "molecule", "mixture", "alloy", "material",
 "composition", "weight", "atomic", "mole", "volume"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    
]


[project.urls]
"PyPI" = "https://pypi.org/project/isovec/"
"GitHub" = "https://github.com/jmercz/isoVec"